--- a/.github/workflows/upload-s3.yaml
+++ b/.github/workflows/upload-s3.yaml
@@ -22,6 +22,8 @@ jobs:
             ${{ runner.os }}-node-
       - name: Build
         run: npm install && npm run build
+        env:
+          CI: false
       - name: Upload
         uses: jakejarvis/s3-sync-action@master
         with:
