--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # REACT_APP_API_URL=JimNastycs.com:5000
 # REACT_APP_API_URL=http://192.168.219.159:5000
-REACT_APP_API_URL=http://127.0.0.1:5000
+REACT_APP_API_URL=https://qr-ufo.com/
 # REACT_APP_API_URL=https://192.168.0.79:5000
